[project]
name = "repository-tests-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "psycopg>=3.2.12",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.12.4",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "pytest-xdist>=3.8.0",
    "ruff==0.14.4",
    "sqlalchemy==2.0.44",
    "testcontainers[postgres]==4.13.2",
]

[tool.pytest.ini_options]
pythonpath = "."
